Add theme support

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <?!= include('views/partials/head'); ?>
     <title>Timesheet App</title>
   </head>
-  <body class="ts-body">
+  <body class="ts-body ts-theme-dark">
     <?!= include('views/partials/navbar'); ?>
     <main class="ts-container">
       <?!= include('views/partials/dashboard'); ?>
