--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -13,6 +13,7 @@
             <option value="dark">Dark</option>
             <option value="light">Light</option>
             <option value="rose">Rose Gold</option>
+            <option value="og">The OG</option>
           </select>
         </div>
       </div>
