--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -16,6 +16,10 @@
             <option value="og">The OG</option>
           </select>
         </div>
+        <div class="ts-col">
+          <label>Superannuation rate (%)</label>
+          <input type="number" id="set-super-rate" min="0" step="0.1" />
+        </div>
       </div>
       <div style="margin-top:8px; text-align:right;"><button id="btn-save-settings">Save Settings</button></div>
       <div style="margin-top:32px;">
